@@ -837,8 +837,8 @@ Section Sum.
 (** Adding a valuation function on all elements of a set. *)
 
 Definition sum (f:elt -> nat)(s:t) := fold (fun x => plus (f x)) s 0.
-Notation compat_opL := (compat_op E.eq (@Logic.eq _)).
-Notation transposeL := (transpose (@Logic.eq _)).
+Notation compat_opL := (compat_op E.eq Logic.eq).
+Notation transposeL := (transpose Logic.eq).
 
 Lemma sum_plus :
   forall f g, compat_nat E.eq f -> compat_nat E.eq g ->
